[tool.poetry]
name = "trilogy"
version = "0.1.0"
description = ""
authors = ["Spencer Peterson <spencer9696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.22.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
